--- a/index.html
+++ b/index.html
@@ -1,137 +1,136 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Увертюра Иордан</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff0080, #7928ca);
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Увертюра Иордан — Психоделический сайт</title>
+<style>
+  /* === Базовые стили === */
+  * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
+  body {
+    background: linear-gradient(120deg, #ff00ff, #00ffff, #ffff00);
+    background-size: 600% 600%;
+    animation: gradientShift 20s ease infinite;
+    overflow-x: hidden;
+    color: #fff;
+  }
+  @keyframes gradientShift {
+    0% {background-position:0% 50%;}
+    50% {background-position:100% 50%;}
+    100% {background-position:0% 50%;}
+  }
 
-        header {
-            text-align: center;
-            padding: 50px 20px;
-            background: rgba(0,0,0,0.3);
-        }
+  h1 {
+    text-align: center;
+    font-size: 4em;
+    margin: 50px 0 20px;
+    color: #fff;
+    text-shadow: 0 0 10px #ff00ff, 0 0 20px #00ffff;
+  }
 
-        header h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 5px black;
-        }
+  /* === Галерея === */
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    padding: 20px;
+  }
+  .album {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    filter: drop-shadow(0 0 20px #ff00ff);
+  }
+  .album img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 3s ease, filter 3s ease;
+  }
+  .album:hover img {
+    transform: scale(1.2) rotate(5deg);
+    filter: hue-rotate(90deg) blur(1px);
+  }
 
-        header nav a {
-            display: inline-block;
-            margin: 0 15px;
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            transition: transform 0.3s, color 0.3s;
-        }
+  /* === Псевдопсиходелический курсор === */
+  .cursor {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: fixed;
+    pointer-events: none;
+    mix-blend-mode: difference;
+    z-index: 9999;
+    background: radial-gradient(circle, #ff00ff 0%, #00ffff 100%);
+    transform: translate(-50%, -50%);
+    transition: width 0.2s ease, height 0.2s ease;
+  }
 
-        header nav a:hover {
-            color: #ff0;
-            transform: scale(1.2);
-        }
-
-        section.album {
-            max-width: 800px;
-            margin: 50px auto;
-            background: rgba(0,0,0,0.4);
-            padding: 20px;
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-        }
-
-        section.album img {
-            width: 100%;
-            border-radius: 15px;
-        }
-
-        section.album h2 {
-            text-align: center;
-            margin-top: 15px;
-            font-size: 2em;
-            text-shadow: 1px 1px 4px black;
-        }
-
-        details {
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-
-        summary {
-            cursor: pointer;
-            font-weight: bold;
-            padding: 10px;
-            background: rgba(255,255,255,0.1);
-            border-radius: 10px;
-        }
-
-        ul {
-            list-style: none;
-            padding-left: 20px;
-            margin-top: 10px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        audio {
-            width: 100%;
-            margin-top: 5px;
-            outline: none;
-        }
-    </style>
+  /* === Случайные вставки === */
+  .floating {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgba(255,255,255,0.8);
+    user-select: none;
+    pointer-events: none;
+    animation: floatFade 5s forwards;
+  }
+  @keyframes floatFade {
+    0% {opacity: 0; transform: translateY(0px) scale(1);}
+    50% {opacity: 1; transform: translateY(-50px) scale(1.2) rotate(10deg);}
+    100% {opacity: 0; transform: translateY(-100px) scale(0.5) rotate(-30deg);}
+  }
+</style>
 </head>
 <body>
-    <header>
-        <h1>Увертюра Иордан</h1>
-        <nav>
-            <a href="#album1">Альбомы</a>
-            <a href="#gallery">Галерея</a>
-        </nav>
-    </header>
 
-    <section id="album1" class="album">
-        <img src="images/album1.jpg" alt="Обложка альбома">
-        <h2>Психоделический Регги</h2>
-        <details>
-            <summary>Треки</summary>
-            <ul>
-                <li>
-                    1. Труп
-                    <audio controls>
-                        <source src="audio/track1.mp3" type="audio/mpeg">
-                        Ваш браузер не поддерживает аудио.
-                    </audio>
-                </li>
-                <li>
-                    2. Одна
-                    <audio controls>
-                        <source src="audio/track2.mp3" type="audio/mpeg">
-                    </audio>
-                </li>
-                <li>
-                    3. Первый признак
-                    <audio controls>
-                        <source src="audio/track3.mp3" type="audio/mpeg">
-                    </audio>
-                </li>
-            </ul>
-        </details>
-    </section>
+<h1>Увертюра Иордан</h1>
 
-    <section id="gallery" class="album">
-        <h2>Галерея</h2>
-        <img src="images/photo1.jpg" alt="Фото группы">
-        <img src="images/photo2.jpg" alt="Фото группы">
-    </section>
+<div class="gallery">
+  <div class="album">
+    <img src="https://via.placeholder.com/250x250.png?text=Альбом+1" alt="Альбом 1">
+  </div>
+  <div class="album">
+    <img src="https://via.placeholder.com/250x250.png?text=Альбом+2" alt="Альбом 2">
+  </div>
+  <div class="album">
+    <img src="https://via.placeholder.com/250x250.png?text=Альбом+3" alt="Альбом 3">
+  </div>
+</div>
+
+<!-- Курсор -->
+<div class="cursor" id="cursor"></div>
+
+<script>
+  /* === Псевдопсиходелический курсор === */
+  const cursor = document.getElementById('cursor');
+  document.addEventListener('mousemove', e => {
+    cursor.style.left = e.clientX + 'px';
+    cursor.style.top = e.clientY + 'px';
+  });
+
+  /* === Случайные вставки на странице === */
+  const words = ["Звуки", "Сон", "Туман", "Свет", "Иллюзия", "Хаос", "Цвет", "Транс"];
+  function createFloating() {
+    const span = document.createElement('span');
+    span.className = 'floating';
+    span.textContent = words[Math.floor(Math.random()*words.length)];
+    span.style.left = Math.random() * window.innerWidth + 'px';
+    span.style.top = Math.random() * window.innerHeight + 'px';
+    span.style.color = `hsla(${Math.random()*360}, 100%, 75%, 0.8)`;
+    span.style.fontSize = (15 + Math.random()*30) + 'px';
+    document.body.appendChild(span);
+    setTimeout(() => span.remove(), 5000);
+  }
+  setInterval(createFloating, 800);
+
+</script>
+
 </body>
 </html>
